Working on mood chart scaling for mobile. Seems okay to me now as I added correct parent div styling for mobile version that wraps the mood chart.

--- a/client/src/Sites/Components/MoodChart/MoodChart.css
+++ b/client/src/Sites/Components/MoodChart/MoodChart.css
@@ -15,7 +15,7 @@
 
 /* Media Queries for Responsive Design */
 @media (max-width: 600px) {
-  .mood-chart-container{
-    width: auto;
+  .mood-chart-container {
+    width: 100vh;
   }
 }
